syntax = "proto3";

package flight.price;

import "price.proto";

service Price {
    rpc GetCityCheapestPrice (CityCheapestPriceRequest) returns (CityCheapestPriceReply);
}
